[gd_scene load_steps=13 format=3 uid="uid://d0hd7v7xuo2mt"]

[ext_resource type="Script" uid="uid://unr6wxryo6yf" path="res://Scripts/level.gd" id="1_0f350"]
[ext_resource type="PackedScene" uid="uid://d4j3lbd6v0vvr" path="res://Scenes/Player.tscn" id="1_tumq0"]
[ext_resource type="PackedScene" uid="uid://cit67arbrhn58" path="res://Scenes/wall.tscn" id="2_6phgx"]
[ext_resource type="PackedScene" uid="uid://4k7fi1yog3xi" path="res://Scenes/platform_moving.tscn" id="2_k5f4k"]
[ext_resource type="PackedScene" uid="uid://dpl03ss1mu7tj" path="res://Scenes/platform_idle.tscn" id="4_81xng"]
[ext_resource type="Script" uid="uid://d3vl6qci00cob" path="res://Scripts/game_camera.gd" id="5_wqkje"]
[ext_resource type="PackedScene" uid="uid://jlwnlmyqkgia" path="res://Scenes/player_ui.tscn" id="7_8c0lf"]
[ext_resource type="PackedScene" uid="uid://bfsq4upjghtse" path="res://Scenes/touch_interface.tscn" id="7_ha31o"]
[ext_resource type="PackedScene" uid="uid://cy560l2xhhi1q" path="res://Scenes/controls_desktop.tscn" id="7_oqgf2"]
[ext_resource type="PackedScene" uid="uid://5vi5cachug6f" path="res://Scenes/controls_mobile.tscn" id="7_qxfql"]
[ext_resource type="PackedScene" uid="uid://5pjliudh38ev" path="res://Scenes/death_screen.tscn" id="8_754fn"]
[ext_resource type="PackedScene" uid="uid://ctklcmklcqsxh" path="res://Scenes/main_menu.tscn" id="9_bvt00"]

[node name="Level" type="Node2D"]
scale = Vector2(2.5, 2.5)
script = ExtResource("1_0f350")
camera_player_boundry = -600

[node name="Player" parent="." instance=ExtResource("1_tumq0")]
position = Vector2(2, 240)
scale = Vector2(1, 1.00301)
jump_speed = -1000
falling_speed_requirement = 250

[node name="Walls" type="Node2D" parent="."]
scale = Vector2(1.3, 1)

[node name="Wall2" parent="Walls" instance=ExtResource("2_6phgx")]
z_index = 1
position = Vector2(270, -4)

[node name="Wall3" parent="Walls" instance=ExtResource("2_6phgx")]
z_index = 1
position = Vector2(270, -1250)

[node name="Wall" parent="Walls" instance=ExtResource("2_6phgx")]
z_index = 1
position = Vector2(-280, 0)

[node name="Wall4" parent="Walls" instance=ExtResource("2_6phgx")]
z_index = 1
position = Vector2(-280, -1250)

[node name="Platforms" type="Node2D" parent="."]

[node name="PlatformIdle" parent="Platforms" instance=ExtResource("4_81xng")]
position = Vector2(2, 261)

[node name="Platform-3" parent="Platforms" instance=ExtResource("2_k5f4k")]
position = Vector2(124, 65)

[node name="Platform-4" parent="Platforms" instance=ExtResource("2_k5f4k")]
position = Vector2(-120, -61)

[node name="Platform-5" parent="Platforms" instance=ExtResource("2_k5f4k")]
position = Vector2(126, -214)

[node name="Platform-6" parent="Platforms" instance=ExtResource("2_k5f4k")]
position = Vector2(-144, -302)

[node name="Platform-2" parent="Platforms" instance=ExtResource("2_k5f4k")]
position = Vector2(-148, 166)

[node name="GameCamera" type="Camera2D" parent="."]
script = ExtResource("5_wqkje")

[node name="TouchInterface" parent="GameCamera" instance=ExtResource("7_ha31o")]
visible = false
z_index = 310
offset_left = -178.8
offset_top = -382.0
offset_right = -178.8
offset_bottom = -382.0

[node name="ControlsMobile" parent="GameCamera" instance=ExtResource("7_qxfql")]
visible = false
z_index = 665
scale = Vector2(1.065, 1.065)

[node name="ControlsDesktop" parent="GameCamera" instance=ExtResource("7_oqgf2")]
visible = false
z_index = 850
scale = Vector2(1.48, 1.48)

[node name="PlayerUI" parent="GameCamera" instance=ExtResource("7_8c0lf")]
visible = false
z_index = 2
offset_left = -148.8
offset_top = -426.0
offset_right = -148.8
offset_bottom = -426.0

[node name="DeathScreen" parent="GameCamera" instance=ExtResource("8_754fn")]
visible = false
z_index = 5
offset_left = -266.4
offset_top = -592.0
offset_right = -266.4
offset_bottom = -592.0
scale = Vector2(1.45, 1.45)

[node name="MainMenu" parent="GameCamera" instance=ExtResource("9_bvt00")]
scale = Vector2(1.495, 1.495)

[node name="DifficultyTimer" type="Timer" parent="."]
one_shot = true

[connection signal="difficulty_increase" from="." to="Player" method="_on_level_difficulty_increase"]
[connection signal="difficulty_increase" from="." to="GameCamera" method="_on_level_difficulty_increase"]
[connection signal="player_death" from="." to="GameCamera/PlayerUI" method="_on_level_player_death"]
[connection signal="player_death" from="." to="GameCamera/DeathScreen" method="_on_level_player_death"]
[connection signal="reached_new_record_y" from="Player" to="." method="_on_player_reached_new_record_y"]
[connection signal="reached_new_record_y" from="Player" to="GameCamera/PlayerUI" method="_on_player_reached_new_record_y"]
[connection signal="main_menu_pressed" from="GameCamera/ControlsMobile" to="." method="_on_controls_mobile_main_menu_pressed"]
[connection signal="main_menu_pressed" from="GameCamera/ControlsDesktop" to="." method="_on_controls_desktop_main_menu_pressed"]
[connection signal="controls_pressed" from="GameCamera/MainMenu" to="." method="_on_main_menu_controls_pressed"]
[connection signal="start_game" from="GameCamera/MainMenu" to="." method="_on_main_menu_start_game"]
[connection signal="start_game" from="GameCamera/MainMenu" to="Player" method="_on_main_menu_start_game"]
[connection signal="start_game" from="GameCamera/MainMenu" to="GameCamera" method="_on_main_menu_start_game"]
[connection signal="timeout" from="DifficultyTimer" to="." method="_on_difficulty_timer_timeout"]
